--- a/Virtualization, databases and Terraform/terraform/ter-homeworks/04/src/cloud-init.yml
+++ b/Virtualization, databases and Terraform/terraform/ter-homeworks/04/src/cloud-init.yml
@@ -4,7 +4,8 @@ users:
     groups: sudo
     shell: /bin/bash
     sudo: ['ALL=(ALL) NOPASSWD:ALL']
-    ssh_authorized_keys: ${public_key}
+    ssh_authorized_keys: 
+    - ${ssh_root_key}
 package_update: true
 package_upgrade: false
 packages:
