--- a/Virtualization_databases_Terraform/terraform/ter-homeworks/04/src/cloud-init.yml
+++ b/Virtualization_databases_Terraform/terraform/ter-homeworks/04/src/cloud-init.yml
@@ -5,7 +5,8 @@ users:
     shell: /bin/bash
     sudo: ['ALL=(ALL) NOPASSWD:ALL']
     ssh_authorized_keys: 
-    - ${ssh_root_key}
+      - ${ssh_public_key}
+      - ${ssh_public_key2}
 package_update: true
 package_upgrade: false
 packages:
