--- a/mnt-homeworks/08-ansible-02-playbook/playbook/group_vars/clickhouse/vars.yml
+++ b/mnt-homeworks/08-ansible-02-playbook/playbook/group_vars/clickhouse/vars.yml
@@ -1,6 +1,26 @@
 ---
-clickhouse_version: "22.3.3.44"
+clickhouse_version: "23.7.2.25"
 clickhouse_packages:
   - clickhouse-client
   - clickhouse-server
   - clickhouse-common-static
+
+vector_url: "https://packages.timber.io/vector/{{ vector_version }}/vector-{{ vector_version }}-1.x86_64.rpm"
+vector_version: 0.22.1
+vector_config_dir: "/etc/vector"
+vector_config:
+  sources:
+    demo_logs:
+      type: demo_logs
+      format: syslog
+  sinks:
+    to_clickhouse:
+      type: clickhouse
+      inputs:
+        - demo_logs
+      database: logs
+      endpoint: http://192.168.0.190:8123
+      table: vector_table
+      compression: gzip
+      healthcheck: true
+      skip_unknown_fields: true
