--- a/mnt-homeworks/09-ci-04-jenkins/infrastructure/inventory/cicd/hosts.yml
+++ b/mnt-homeworks/09-ci-04-jenkins/infrastructure/inventory/cicd/hosts.yml
@@ -2,9 +2,9 @@
 all:
   hosts:
     jenkins-master-01:
-      ansible_host: <master>
+      ansible_host: 51.250.12.188
     jenkins-agent-01:
-      ansible_host: <agent>
+      ansible_host: 158.160.119.193
   children:
     jenkins:
       children:
@@ -16,4 +16,5 @@ all:
               jenkins-agent-01:
   vars:
     ansible_connection_type: paramiko
-    ansible_user: <user>
+    ansible_user: centos
+    ansible_ssh_private_key_file: /home/alex/.ssh/id_ed25519
