--- a/kuber-homeworks/3.2/mycluster/group_vars/all/all.yml
+++ b/kuber-homeworks/3.2/mycluster/group_vars/all/all.yml
@@ -18,7 +18,7 @@ bin_dir: /usr/local/bin
 ## Internal loadbalancers for apiservers
 loadbalancer_apiserver_localhost: true
 # valid options are "nginx" or "haproxy"
-loadbalancer_apiserver_type: nginx
+loadbalancer_apiserver_type: haproxy
 # valid values "nginx" or "haproxy"
 
 ## Local loadbalancer should use this port
